@@ -1,3 +1,9 @@
+2010-12-18  Colin Watson  <cjwatson@ubuntu.com>
+
+	* grub-core/normal/term.c (print_more): Make \r or \n scroll one
+	line, and other keys scroll an entire page (previous handling was
+	for \r and \n to scroll a page and other keys to scroll two lines).
+
 2010-12-18  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/loader/i386/multiboot_mbi.c (grub_multiboot_make_mbi):
